versioned_docs/version-0.18.0/providers/aws/resources.mdx
---
id: resources
title: Supported Resources
---

|resource type|deep mode available|
|---|:-:|
| aws_s3_bucket | ✅ |
| aws_s3_bucket_analytics_configuration | ✅ |
| aws_s3_bucket_inventory | ✅ |
| aws_s3_bucket_metric | ✅ |
| aws_s3_bucket_notification | ✅ |
| aws_s3_bucket_policy | ✅ |
| aws_instance | ✅ |
| aws_key_pair | ✅ |
| aws_ami | ✅ |
| aws_ebs_snapshot | ✅ |
| aws_ebs_volume | ✅ |
| aws_eip | ✅ |
| aws_eip_association | ✅ |
| aws_lambda_function | ✅ |
| aws_lambda_event_source_mapping | ✅ |
| aws_db_instance | ✅ |
| aws_db_subnet_group | ✅ |
| aws_route53_record | ✅ |
| aws_route53_zone | ✅ |
| aws_route53_health_check | ✅ |
| aws_iam_access_key | ✅ |
| aws_iam_policy | ✅ |
| aws_iam_policy_attachment | ✅ |
| aws_iam_role | ✅ |
| aws_iam_role_policy | ✅ |
| aws_iam_role_policy_attachment | ✅ |
| aws_iam_user | ✅ |
| aws_iam_user_policy | ✅ |
| aws_iam_user_policy_attachment | ✅ |
| aws_default_subnet | ✅ |
| aws_subnet | ✅ |
| aws_default_vpc | ✅ |
| aws_vpc | ✅ |
| aws_default_security_group | ✅ |
| aws_security_group | ✅ |
| aws_security_group_rule | ✅ |
| aws_route_table | ✅ |
| aws_default_route_table | ✅ |
| aws_route | ✅ |
| aws_route_table_association | ✅ |
| aws_nat_gateway | ✅ |
| aws_internet_gateway | ✅ |
| aws_sqs_queue | ✅ |
| aws_sqs_queue_policy | ✅ |
| aws_sns_topic | ✅ |
| aws_sns_topic_policy | ✅ |
| aws_sns_topic_subscription | ✅ |
| aws_dynamodb_table | ✅ |
| aws_cloudfront_distribution | ✅ |
| aws_ecr_repository | ✅ |
| aws_kms_key | ✅ |
| aws_kms_alias | ✅ |
| aws_rds_cluster | ✅ |
| aws_cloudformation_stack | ✅ |
| aws_api_gateway_rest_api | ❌ |
| aws_api_gateway_account | ❌ |
| aws_api_gateway_api_key | ❌ |
| aws_api_gateway_authorizer | ❌ |
| aws_api_gateway_stage | ❌ |
| aws_api_gateway_resource | ❌ |
| aws_api_gateway_domain_name | ❌ |
| aws_api_gateway_vpc_link | ❌ |
| aws_api_gateway_request_validator | ❌ |
| aws_api_gateway_rest_api_policy | ❌ |
| aws_api_gateway_base_path_mapping | ❌ |
| aws_api_gateway_method | ❌ |
| aws_api_gateway_model | ❌ |
| aws_api_gateway_method_response | ❌ |
| aws_api_gateway_gateway_response | ❌ |
| aws_api_gateway_method_settings | ❌ |
| aws_api_gateway_integration | ❌ |
| aws_api_gateway_integration_response | ❌ |
| aws_apigatewayv2_api | ❌ |
| aws_apigatewayv2_authorizer | ❌ |
| aws_appautoscaling_target | ✅ |
| aws_default_network_acl | ✅ |
| aws_network_acl | ✅ |
| aws_network_acl_rule | ✅ |
| aws_rds_cluster_instance | ✅ |
| aws_appautoscaling_policy | ✅ |
| aws_appautoscaling_scheduled_action | ❌ |
| aws_apigatewayv2_route | ❌ |
| aws_apigatewayv2_vpc_link | ❌ |
| aws_launch_template | ✅ |
| aws_launch_configuration | ❌ |
